tests/compile_error/invalid_op.xprshn
// Compile error: invalid operation
int a!
a = 5!
print a && 3! // Invalid logical operation for int 